# nonebot-plugin-flexperm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: adapters.md  command.md  interface.md  permdesc.md
nonebot_plugin_flexperm/: __init__.py  __init__.pyi  adapters.py  check.py  cmds.py  config.py  core.py  defaults.yml  plugin.py  util.py
permman/: __init__.py  check.py  cmds.py  config.py  core.py  defaults.yml  plugin.py
