[tool.poetry]
name = "nonebot-plugin-flexperm"
version = "0.6.0"
description = "精细化的 NoneBot 权限管理插件"
license = "MIT"
authors = ["Muchan <liuzh1773@buaa.edu.cn>"]
readme = "README.md"
repository = "https://github.com/rmuchan/nonebot-plugin-flexperm"
keywords = ["nonebot"]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0rc2"
nonebot-adapter-onebot = "^2.2.0"
"ruamel.yaml" = "^0.17.10"
nonebot-plugin-apscheduler = "^0.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
